# ingestion-benchmark

./: README.md  pyproject.toml
benchmark/: constant_images_per_second.js
benchmark/utils/: env.js  imageRecognition.js  random.js
results/: env.py  fetch_results.py
